styles/ui/panel.module.scss
@import '../vars.scss';

$input-height: 52px;
$spacing: 12px;
$actions-top: 2 * $spacing + $input-height;
$actions-height: 60px;
$shell-top: $actions-top + $spacing;
$shell-top-with-actions: $actions-height + $shell-top;
$head-height: 36px;
$panel-padding: 1.5 * $spacing;

.shell {
  position: absolute;

  top: $shell-top;
  right: auto;
  bottom: $spacing;
  left: $spacing;
  z-index: 100;
  width: 400px;
  overflow: hidden;
  border-radius: 4px;
}

.shell.withActions {
  top: $shell-top-with-actions;
}

.actions {
  position: absolute;
  background-color: transparent;
  top: $actions-top;
  left: $spacing;
  height: $actions-height;
  right: auto;
  z-index: 100;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: left;
  border-radius: 4px;

  button {
    background-color: white;
    border-radius: 4px;
    margin-right: $spacing;
  }
  .buttonSelected {
    background-color: var(--text-action-high-blue-france) !important;
    :hover {
      background-color: var(--text-action-high-blue-france);
    }
  }

  .action {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-transform: uppercase;
    border-radius: 4px;
    padding-top: 6px;
    .actionSelected {
      color: white;
    }
  }
}

.content {
  background: white;
  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);

  border-top-left-radius: 4px;
  border-top-right-radius: 4px;

  border-radius: 4px;
  display: flex;
  flex-direction: column;
  max-height: 100%;

  position: absolute;
  bottom: 0;
  right: 0;
  left: 0;
  top: 0;

  .head {
    $title-color: #414e71;
    height: $head-height;
    min-height: $head-height;
    max-height: $head-height;

    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #f4f6ff;

    padding-left: $panel-padding;
    padding-right: 6px;

    .title {
      color: $title-color;
      font-size: 0.8rem;
      line-height: 1em;
      margin: 0;
      text-transform: uppercase;
      flex: 1 0 0;
    }

    .closeLink {
      margin-left: 1rem;
      color: $title-color;
      opacity: 0.8;
      background: none;
      text-decoration: none;
      i::before {
        width: 25px;
        height: 25px;
      }
    }
    .closeLink:hover {
      color: white;
      background: black;
    }
  }

  .panelSection {
    margin-bottom: $spacing;

    .sectionTitle {
      font-size: 0.9em;
      line-height: 1.3em;
      color: #0063cb;
      margin-bottom: 0.2rem;
    }

    .sectionBody {
      font-size: 0.9em;
      line-height: 1.3em;
    }
  }

  .noPad {
    padding-top: $spacing;
  }
}

.body {
  padding: $panel-padding $panel-padding 0 $panel-padding;
  flex-grow: 1;
  flex-shrink: 1;
  overflow: auto;
}

.footer {
  padding: $spacing $spacing $spacing 2 * $spacing;
  z-index: 90;
  flex-shrink: 1;
  flex-grow: 0;
  width: 100%;
  background: var(--background-alt-blue-france);
  display: flex;
  justify-content: space-between;
}

.noticeContainer {
  pointer-events: none;
  background-color: transparent;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 100;
  display: flex;
  justify-content: center;
  .notice {
    opacity: 0;
    transform: translateY(100%);
    transition: none;
  }

  .noticeVisible {
    opacity: 1;
    transform: translateY(0);
    transition:
      opacity 0.4s ease,
      transform 0.5s ease;
    pointer-events: auto;
  }
}

.editToggle {
  padding-right: 48px !important;
  display: flex;
  flex-direction: column;
  align-items: center;

  div {
    label::before {
      margin-left: 0 !important;
    }
  }
}
.editLoader {
  margin: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
  span {
    font-size: 14px;
    margin-top: 20px;
  }
}

